# tg-seller-pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.md  bot.py  config.py  database.py  deploy.sh  docker-compose.yml  error.txt  implementation.md  install.sh  justfile  last session.md  main.py  pyproject.toml  requirements.txt
core/: filters.py  format.py  help_content.py  keyboards.py  permissions.py  state.py
database/: __init__.py  accounts.py  categories.py  connection.py  dues.py  logs.py  sales.py  sellers.py  sessions.py
handlers/: __init__.py  accounts.py  buyers.py  callbacks.py  categories.py  command_logger.py  dues.py  errors.py  export.py  help.py  inventory.py  logs.py  messages.py  preview.py  reports.py  search.py  sell.py  sellers.py  start.py  stats.py  transfersales.py
handlers/callbacks/: __init__.py  add.py  csv.py  dues.py  list.py  menu.py  misc.py  sales.py  search.py  sell.py  transfersales.py
tests/: conftest.py  test_categories.py  test_csv_utils.py  test_database.py  test_filters.py  test_format.py  test_parsers.py  test_permissions.py  test_sales.py  test_state.py
utils/: charts.py  csv_utils.py  notifications.py  parsers.py  scheduler.py
