[project]
name = "tg-seller-pro"
version = "1.0.0"
description = "Telegram bot for managing and selling Reddit accounts"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "handlers", "utils", "database"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
